[gd_scene load_steps=101 format=3 uid="uid://bb2ecfe3b0afw"]

[ext_resource type="Texture2D" uid="uid://cyqllbxqpy4v" path="res://assets/Cat_85_Animations/Cat_Ginger.png" id="1_4flbx"]
[ext_resource type="Script" uid="uid://bfs7o0e148q3s" path="res://scenes/shmovement.gd" id="1_onrkg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4flbx"]
size = Vector2(137, 88)

[sub_resource type="AtlasTexture" id="AtlasTexture_4flbx"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5iqpv"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_clo0i"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qddw5"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_10wyj"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lix82"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed8wo"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulber"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fddr8"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybyf"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajfva"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ef02"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 576, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jj5r"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_77e46"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy2ki"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_04cqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vihdy"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7c55y"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoal8"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htija"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfmca"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76oay"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4uyv"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tw8ou"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygbnx"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2t6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3lcn"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xry5e"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6w8y"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yem3p"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_86rna"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg1a7"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ob4mi"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ax26h"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kh4g0"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgmjd"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va2xi"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkf2u"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7jk6"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_feeoa"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m6nxt"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym00c"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee2o4"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vie4p"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 640, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_onrkg"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i3pqv"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hqtel"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urp6f"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwjto"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_606se"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1c27"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbf7a"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 736, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vef0t"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 736, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjtop"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 736, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0au4"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 736, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("1_4flbx")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("1_4flbx")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("1_4flbx")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("1_4flbx")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("1_4flbx")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("1_4flbx")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("1_4flbx")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("1_4flbx")
region = Rect2(224, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_5iqpv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4flbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5iqpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_clo0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qddw5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10wyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lix82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed8wo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulber")
}],
"loop": true,
"name": &"bros joggin",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}],
"loop": true,
"name": &"bros sittin (1)",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}],
"loop": true,
"name": &"bros sittin (2) boppin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fddr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybyf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajfva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ef02")
}],
"loop": true,
"name": &"bros sittin (3) smol bop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jj5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77e46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy2ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04cqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vihdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7c55y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoal8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htija")
}],
"loop": true,
"name": &"bros sittin (4) looky",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfmca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76oay")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4uyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tw8ou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygbnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2t6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3lcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xry5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6w8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yem3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86rna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg1a7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ob4mi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ax26h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kh4g0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgmjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va2xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkf2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7jk6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_feeoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m6nxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym00c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee2o4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vie4p")
}],
"loop": true,
"name": &"bros sittin final",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_onrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3pqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hqtel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}],
"loop": true,
"name": &"bros walkin",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urp6f")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwjto")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_606se")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1c27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}],
"loop": true,
"name": &"idle_ready",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbf7a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vef0t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjtop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0au4")
}],
"loop": false,
"name": &"idle_to_sit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}],
"loop": true,
"name": &"tail",
"speed": 2.0
}]

[node name="car" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 36)
shape = SubResource("RectangleShape2D_4flbx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_5iqpv")
animation = &"bros sittin (4) looky"

[node name="sitting_timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="sitting_timer" to="." method="_on_sitting_timer_timeout"]
